# scylla-fast-feature-store

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
cql/: schema.cql
docker/: docker-compose.yml
docs/: DATASET.md  RESULTS.md
scripts/: cluster.sh  monitoring.sh  run.sh  sync.sh
speaker-notes/: 01-fast-feature-store.deck.md  01-fast-feature-store.md
src/feature_store/: __init__.py  api.py  apply_schema.py  bench.py  config.py  consumer.py  dashboard.py  features.py  loadgen.py  replay.py  scorer.py  statements.py  writer.py
